--- a/index.html
+++ b/index.html
@@ -104,10 +104,12 @@ div#footer	{background-image: url(line-blue.png);
 	padding-top: 8px;
 	clear: both}
 
-small	{font-size: 0.75em;
+small	{
+	font-size: 0.75em;
 	font-style: normal;
 	text-align: center;
-	display: block;}
+	display: block
+}
 
 </style>
 </head>
